jaml/examples/invalid/inline_list_nl.jaml
# Inline lists with newlines are allowed in YAML, but not JAML.
# JAML's inline syntax is intentionally compact/single-line.
# For multi-line lists, use JAML's indentation-based block syntax.
# (YAML oddly rejects trailing commas, but JAML allows them in inline syntax.)
inline_list_nl: [
  1,
  2,
  3
]
